tests/sumo/basic/container/errors/testsuite.sumo
duplicate_id

# Copy of duplicate_id
duplicate_person_id
